Crea xml y adapter para mostrar correctamente eventos en su layout

--- a/app/src/main/res/layout/fragment_eventos_list.xml
+++ b/app/src/main/res/layout/fragment_eventos_list.xml
@@ -23,31 +23,9 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/editText4"
+            <ListView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Evento1" />
-
-            <EditText
-                android:id="@+id/editText5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Evento2" />
-
-            <EditText
-                android:id="@+id/editText6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Evento3" />
+                android:layout_height="match_parent" />
         </LinearLayout>
     </ScrollView>
 
