--- a/app/src/main/res/layout/participante_list_row.xml
+++ b/app/src/main/res/layout/participante_list_row.xml
@@ -7,6 +7,8 @@
     android:focusable="true"
     android:orientation="vertical"
     android:paddingBottom="@dimen/row_padding_vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/row_padding_vertical">
 
     <ImageView
