--- a/app/src/main/res/layout/payment_list_row.xml
+++ b/app/src/main/res/layout/payment_list_row.xml
@@ -7,17 +7,17 @@
     android:focusable="true"
     android:orientation="vertical"
     android:paddingBottom="@dimen/row_padding_vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin_small"
+    android:paddingRight="@dimen/activity_horizontal_margin_small"
     android:paddingTop="@dimen/row_padding_vertical">
 
     <TextView
         android:id="@+id/tv_payment_row_monto"
-        android:layout_width="70dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:text="$150.23"
-        android:textAlignment="textEnd"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:textColor="@android:color/black" />
 
@@ -82,7 +82,6 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:src="@drawable/ic_access_time_black_24dp" />
 
 </RelativeLayout>
