--- a/app/src/main/res/layout/fragment_tareas_page.xml
+++ b/app/src/main/res/layout/fragment_tareas_page.xml
@@ -8,6 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_margin="@dimen/activity_vertical_margin">
 
         <TextView
@@ -22,23 +23,11 @@
             android:textColor="@color/colorPrimaryDark"
             android:textSize="30sp" />
 
-        <TextView
-            android:id="@+id/tv_evento_name_tareas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_tareas_title"
-            android:layout_marginBottom="2dp"
-            android:layout_marginLeft="2dp"
-            android:layout_marginTop="2dp"
-            android:text="@string/evento_name_pholder"
-            android:textAppearance="@android:style/TextAppearance.Material.Medium"
-            android:textSize="20sp" />
-
         <View
             android:id="@+id/tareas_separator"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:layout_below="@id/tv_evento_name_tareas"
+            android:layout_below="@id/tv_tareas_title"
             android:layout_marginBottom="3dp"
             android:layout_marginTop="3dp"
             android:background="@color/colorPrimary" />
