--- a/app/src/main/res/menu/menu_evento.xml
+++ b/app/src/main/res/menu/menu_evento.xml
@@ -2,8 +2,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.dglozano.meetapp.EventoActivity">
+
+    <!-- "Mark Favorite", should appear as action button if possible -->
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/toolbar_search"
+        android:icon="@drawable/ic_search_white_24dp"
+        android:title="@android:string/search_go"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
+
+    <item
+        android:id="@+id/menu_item_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
