--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.dglozano.meetapp.MainActivity">
+
+    <item
+        android:id="@+id/toolbar_search_main"
+        android:icon="@drawable/ic_search_white_24dp"
+        android:title="@android:string/search_go"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
