Agrega toolbar a EventoForm

--- a/app/src/main/res/layout/activity_evento_form.xml
+++ b/app/src/main/res/layout/activity_evento_form.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:titleTextColor="@android:color/white">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_evento_form"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimaryDark"
+        android:elevation="4dp"
+        android:theme="@style/ToolbarStyle"
+        app:titleTextColor="@android:color/white"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
         android:paddingBottom="20dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
@@ -33,67 +45,64 @@
             android:layout_marginTop="3dp"
             android:background="@color/colorPrimary"/>
 
+        <TextView
+            android:id="@+id/textView_labelNombre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/settings_separator"
+            android:text="@string/nombre"/>
+
         <EditText
             android:id="@+id/editText_nombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/settings_separator"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textView_labelNombre"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
             android:ems="10"
-            android:hint="@string/hint_nombre"
             android:inputType="textPersonName"/>
+
+        <TextView
+            android:id="@+id/textView_labelLugar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/editText_nombre"
+            android:text="@string/lugar"/>
 
         <EditText
             android:id="@+id/editText_lugar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/editText_nombre"
+            android:layout_below="@+id/textView_labelLugar"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
             android:clickable="true"
             android:ems="10"
             android:focusable="false"
-            android:hint="@string/hint_lugar"
             android:inputType="text"/>
+
+        <TextView
+            android:id="@+id/textView_labelFecha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/editText_lugar"
+            android:text="@string/fecha"/>
 
         <EditText
             android:id="@+id/editText_fecha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/editText_lugar"
+            android:layout_below="@+id/textView_labelFecha"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
             android:clickable="true"
             android:ems="10"
             android:focusable="false"
-            android:hint="@string/hint_fecha"
             android:inputType="text"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/editText_fecha"
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/eventoFormGuardar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/guardar"/>
-
-            <Button
-                android:id="@+id/eventoFormCancelar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/cancelar"/>
-
-        </LinearLayout>
 
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
