--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.dglozano.meetapp.MainActivity">
+    tools:context="com.example.dglozano.meetapp.actividades.MainActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar_main"
