--- a/app/src/main/res/menu/menu_evento.xml
+++ b/app/src/main/res/menu/menu_evento.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.dglozano.meetapp.EventoActivity">
+    tools:context="com.example.dglozano.meetapp.actividades.EventoActivity">
 
     <!-- "Mark Favorite", should appear as action button if possible -->
     <item
