--- a/app/src/main/res/layout/evento_list_row.xml
+++ b/app/src/main/res/layout/evento_list_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
@@ -17,7 +18,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:text="TextView"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:textColor="@color/colorPrimaryDark"/>
 
@@ -27,8 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tv_titulo_evento"
-        android:layout_marginTop="9dp"
-        android:text="TextView" />
+        android:layout_marginTop="9dp" />
 
     <TextView
         android:id="@+id/tv_organizadores_evento"
@@ -36,8 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tv_fecha_evento"
-        android:layout_marginTop="9dp"
-        android:text="TextView" />
+        android:layout_marginTop="9dp" />
 
     <TextView
         android:id="@+id/tv_tareas_completas_evento"
@@ -45,6 +43,6 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/tv_organizadores_evento"
         android:layout_alignBottom="@+id/tv_organizadores_evento"
-        android:layout_alignParentEnd="true"
-        android:text="TextView" />
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
