Agrega nuevas layouts de Contactos

--- a/app/src/main/res/menu/menu_contactos.xml
+++ b/app/src/main/res/menu/menu_contactos.xml
@@ -1,4 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.dglozano.meetapp.actividades.EventoActivity">
+
+    <!-- "Mark Favorite", should appear as action button if possible -->
+    <item
+        android:id="@+id/toolbar_search_contactos"
+        android:icon="@drawable/ic_search_white_24dp"
+        android:title="@android:string/search_go"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView" />
+
+    <item
+        android:id="@+id/menu_item_Ok"
+        android:icon="@drawable/ic_done_white_24dp"
+        android:title="@string/action_guardar"
+        app:showAsAction="always"/>
 
 </menu>
