--- a/app/src/main/res/layout/contactos_activity.xml
+++ b/app/src/main/res/layout/contactos_activity.xml
@@ -39,7 +39,7 @@
             android:id="@+id/settings_separator"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:layout_below="@id/tv_tarea_title"
+            android:layout_below="@id/tv_contactos_title"
             android:layout_marginBottom="15dp"
             android:layout_marginTop="3dp"
             android:background="@color/colorPrimary" />
@@ -48,7 +48,7 @@
             android:id="@+id/listView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/tv_tarea_title"
+            android:layout_alignStart="@+id/tv_contactos_title"
             android:layout_below="@+id/settings_separator" />
 
     </RelativeLayout>
