Cambia layout de evento row y agrega ellipsize
Muestra la cantidad de organizadores y tareas en el listview de eventos.
Para mostrar un evento a partir de una LatLng se usa Geocoder para hacer reverse
geocoding.

Agrega atributo ellipsize al lugar en el evento row y a los participantes
en participante row para cortar el nombre si no entra y poner "..."

--- a/app/src/main/res/layout/activity_evento_form.xml
+++ b/app/src/main/res/layout/activity_evento_form.xml
@@ -31,10 +31,10 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="2dp"
-            android:text="@string/evento_title"
+            android:text="@string/crear_evento"
             android:textAppearance="@android:style/TextAppearance.Material.Large"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="30sp"/>
+            android:textSize="30sp" />
 
         <View
             android:id="@+id/settings_separator"
