--- a/app/src/main/res/layout/tarea_list_row.xml
+++ b/app/src/main/res/layout/tarea_list_row.xml
@@ -16,6 +16,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@id/img_tarea_row_estado_icon"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:singleLine="true"
+        android:ellipsize="marquee"
         android:text="Comprar Jabon"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:textColor="@color/colorPrimaryDark" />
@@ -23,6 +27,10 @@
     <TextView
         android:id="@+id/tv_tarea_row_persona_asignada"
         android:layout_width="match_parent"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:layout_toLeftOf="@id/img_tarea_row_estado_icon"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_tarea_row_title"
         android:text="Diego Garcia Lozano"
