--- a/app/src/main/res/layout/fragment_tareas_page.xml
+++ b/app/src/main/res/layout/fragment_tareas_page.xml
@@ -41,6 +41,34 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:scrollbars="vertical" />
 
+        <LinearLayout
+            android:id="@+id/empty_msg_layout_tareas"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignEnd="@id/recvw_tareas_list"
+            android:layout_alignStart="@id/recvw_tareas_list"
+            android:layout_below="@id/tareas_separator"
+            android:layout_marginBottom="@dimen/activity_bottom_carousel_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:orientation="vertical"
+            android:visibility="visible">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            app:srcCompat="@drawable/ic_mood_black_48dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:lineSpacingExtra="4sp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:text="@string/emtpy_msg_tareas"
+            android:textAlignment="center"
+            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
+        </LinearLayout>
     </RelativeLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_btn_crear_tarea"
