--- a/app/src/main/res/layout/activity_tarea_form.xml
+++ b/app/src/main/res/layout/activity_tarea_form.xml
@@ -15,89 +15,118 @@
         android:theme="@style/ToolbarStyle"
         app:titleTextColor="@android:color/white"/>
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:paddingBottom="20dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="20dp">
+        android:layout_marginTop="?attr/actionBarSize">
 
-        <TextView
-            android:id="@+id/tv_tarea_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="2dp"
-            android:text="@string/crear_tarea"
-            android:textAppearance="@android:style/TextAppearance.Material.Large"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="30sp" />
-
-        <View
-            android:id="@+id/settings_separator"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_below="@id/tv_tarea_title"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="3dp"
-            android:background="@color/colorPrimary"/>
-
-        <TextView
-            android:id="@+id/textView_labelTitulo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/settings_separator"
-            android:text="@string/titulo"/>
-
-        <EditText
-            android:id="@+id/editText_titulo"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/textView_labelTitulo"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="8dp"
-            android:ems="10"
-            android:inputType="textPersonName"/>
+            android:paddingBottom="20dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="20dp">
 
-        <TextView
-            android:id="@+id/textView_labelEncargado"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/editText_titulo"
-            android:text="@string/encargado"/>
+            <TextView
+                android:id="@+id/tv_tarea_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="2dp"
+                android:text="@string/crear_tarea"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="30sp"/>
 
-        <Spinner
-            android:id="@+id/spinner_encargado"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/textView_labelEncargado"
-            android:layout_marginBottom="8dp"
-            android:minHeight="45dp"/>
+            <View
+                android:id="@+id/settings_separator"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_below="@id/tv_tarea_title"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="3dp"
+                android:background="@color/colorPrimary"/>
 
-        <TextView
-            android:id="@+id/textView_labelDescripcion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/spinner_encargado"
-            android:text="@string/descripcion"/>
+            <TextView
+                android:id="@+id/textView_labelTitulo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/settings_separator"
+                android:text="@string/titulo"/>
 
-        <EditText
-            android:id="@+id/editText_descripcion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/textView_labelDescripcion"
-            android:layout_marginBottom="8dp"
-            android:ems="10"
-            android:inputType="textLongMessage"/>
+            <EditText
+                android:id="@+id/editText_titulo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/textView_labelTitulo"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="8dp"
+                android:ems="10"
+                android:inputType="textPersonName"/>
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/textView_labelEncargado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/editText_titulo"
+                android:text="@string/encargado"/>
+
+            <Spinner
+                android:id="@+id/spinner_encargado"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/textView_labelEncargado"
+                android:layout_marginBottom="8dp"
+                android:minHeight="45dp"/>
+
+            <TextView
+                android:id="@+id/textView_labelDescripcion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/spinner_encargado"
+                android:text="@string/descripcion"/>
+
+            <EditText
+                android:id="@+id/editText_descripcion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/textView_labelDescripcion"
+                android:layout_marginBottom="8dp"
+                android:ems="10"
+                android:inputType="textLongMessage"/>
+
+            <TextView
+                android:id="@+id/frmLblFoto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/editText_descripcion"
+                android:text="Foto"/>
+
+            <Button
+                android:id="@+id/btn_cargarfoto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/editText_descripcion"
+                android:text="@string/cargar_imagen"/>
+
+            <ImageView
+                android:id="@+id/frmImgFoto"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/btn_cargarfoto"/>
+
+        </RelativeLayout>
+    </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
